# Open-Minions

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
src/minions/: __init__.py  cli.py  config.py  context.py  display.py  llm.py  orchestrator.py  rules.py  web.py
src/minions/integrations/: __init__.py  github_client.py  slack_bot.py
src/minions/tools/: __init__.py  git_tools.py  lint_tools.py  pr_tools.py
